examples/negative/mutable/field_array_write_no_row.kai
# Negative fixture (#511 / Mutable contract): writing through
# an Array read from a record field originating outside the
# function is an observable mutation (issue #251 § rule 1).
# The fn declares no row, must be rejected.

type Box = { arr: Array[Int] }

fn write_field(b: Box) : Unit {
  b.arr[0] := 99
}

fn main() : Unit / Mutable + Console = {
  let a = array_make(1, 0)
  let b = Box { arr: a }
  write_field(b)
  print(int_to_string(a[0]))
}
